# seeKi

./: .gitignore  .impeccable.md  2026-04-08-council-merge-epic-1-into-main.md  2026-04-08-council-pr28-frontend-scaffold-integration.md  2026-04-11-council-pr-31-first-run-setup-wizard.md  2026-04-11-council-pr-31-fourth-council.md  2026-04-11-council-pr-31-third-council-final.md  2026-04-11-council-pr-31-wizard-post-fixes-merge-ready.md  2026-04-12-213500-council-merge-pr-32-epic-end-to-end-qa.md  2026-04-12-221500-council-pr32-mec-miki-session3.md  2026-04-12-223500-council-pr32-session4.md  2026-04-12-council-pr-31-fifth-council.md  2026-04-12-council-pr-31-seventh-council.md  2026-04-12-council-pr-31-sixth-council.md  2026-04-13-council-pr32-mec-miki-1v1.md  2026-04-13-council-pr32-mec-miki-rerun.md  2026-04-13-council-pr32-mec-miki-s7.md  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  QA-CHECKLIST.md  README.md  VERSION  backend-api-config-spec.md  build.rs  cliff.toml  config-extensions-spec.md  council-fix-manifest.json  data-grid-table-navigation-spec.md  deploy-sg.sh  end-to-end-qa-spec.md  first-run-setup-wizard-spec.md  frontend-scaffold-integration-spec.md  index.html  logo-and-brand-mark-redesign-spec.md  package-lock.json  seeki-mvp-spec.md  seeki.toml.example  (+3 more)
.council/: 2026-04-10-council-recommendation-round1.md  2026-04-10-council-recommendation-session10.md  2026-04-10-council-recommendation-session11.md  2026-04-10-council-recommendation-session6.md  2026-04-10-council-recommendation-session7.md  2026-04-10-council-recommendation-session8.md  2026-04-10-council-recommendation-session9.md  council-recommendation.md  council-result.json  fix-manifest.md  pr30.diff
.github/: CI-CD-Guide.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  epic.yml  feature_request.yml  hotfix.yml  task.yml
.github/workflows/: ci.yml  deploy-docs.yml  docker-publish.yml  e2e.yml  issue-branch-handler.yml  (+5 more)
api/: columns.html  index.html  rows.html  tables.html
assets/: README.md
develop/: adding-a-db-engine.html  architecture.html  build-release.html  frontend-map.html
docs/: deploy-base21.md
features/: branding.html  column-dropdown.html  data-grid.html  null-rendering.html  setup-wizard.html  yes-no-badges.html
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
get-started/: config-reference.html  connections.html  install.html  quickstart.html  ssh-tunneling.html
migrations/: 0001_initial.sql  0002_saved_views.sql  0003_page_size.sql
operate/: config-locations.html  logs.html  running.html  troubleshooting.html
project/: changelog.html  contributing.html  roadmap.html  security.html
scripts/: redeploy.sh  version-package.mjs
src/: app_mode.rs  config.rs  embed.rs  main.rs  testutil.rs
(+100 files in other folders)
