[package]
name = "seeki"
version = "0.1.0"
edition = "2024"
description = "A read-only, spreadsheet-like database viewer for casual users. data-seeKing."
license = "MIT"
authors = ["Jovian Lim <kiriketsuki@gmail.com>"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-str"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV export
csv = "1"

# Async streaming
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
bytes = "1"

# Frontend embedding
rust-embed = "8"
mime_guess = "2"

# Utilities
anyhow = "1"
dirs-next = "2"
openssh = { version = "0.10", features = ["native-mux"] }
url = "2"

[dev-dependencies]
http-body-util = "0.1.3"
